--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,7 @@
     	</developer>
     	<developer>
     		<name>zhou_dongchu</name>
-    		<email>zhou_dongchu@qq.com</email>
+    		<email>zhoudcrobin@qq.com</email>
     		<url>https://github.com/ewcmsfree</url>
     		<roles>
     			<role>software engineer</role>
