--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -19,6 +19,9 @@
 		<module>../base-shiro</module>
 		<module>../empi-entity</module>
 		<module>../empi-web</module>
+		<module>../empi-sms</module>
+		<module>../empi-ws</module>
+		<module>../empi-hl7v2x</module>
 	</modules>
 
 	<repositories>
@@ -266,6 +269,7 @@
 		<commons-lang3.version>3.1</commons-lang3.version>
 		<commons-io.version>2.4</commons-io.version>
 		<commons-collections4.version>4.0</commons-collections4.version>
+		<common.compress.version>1.6</common.compress.version>
 
 		<guava.version>15.0</guava.version>
 		<common.fileupload.version>1.3</common.fileupload.version>
@@ -362,6 +366,11 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>${common.fileupload.version}</version>
 		</dependency>
+		<dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>${common.compress.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>org.apache.ant</groupId>
 			<artifactId>ant</artifactId>
