--- a/pom.xml
+++ b/pom.xml
@@ -5,189 +5,186 @@
 	<artifactId>rmyy</artifactId>
 	<version>1.0.0</version>
 	<packaging>pom</packaging>
-	
+
 	<url>https://github.com/ewcmsfree/rmyy</url>
 	<organization>
 		<name>rmyy</name>
 		<url>https://github.com/ewcmsfree</url>
 	</organization>
-	
-	<modules>
-    	<module>parent</module>
-    </modules>
-    
-	<build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>3.5</version>
-                <configuration>
-                    <locales>zh_CN</locales>
-                    <outputEncoding>UTF-8</outputEncoding>
-                    <inputEncoding>UTF-8</inputEncoding>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-    
-    <repositories>
-    	<!-- 
-    	<repository>
-    		<id>oschina release</id>
-    		<name>oschina release</name>
-    		<url>http://maven.oschina.net/content/groups/public/</url>
-    	</repository>
-    	 -->
-    	<repository>
-    		<id>apache-repo</id>
-    		<name>Apache Repository</name>
-    		<url>https://repository.apache.org/content/groups/public/</url>
-    	</repository>
-    	<repository>
-    		<id>java-repo</id>
-    		<name>Java Repository</name>
-    		<url>http://download.java.net/maven/2/</url>
-    	</repository>
-    	<repository>
-    		<id>springsource-repo</id>
-    		<name>SpringSource Repository</name>
-    		<url>http://repo.spring.io/release/</url>
-    	</repository>
-    	<repository>
-    		<id>springsource-repo-snapshot</id>
-    		<name>SpringSource Repository Snapshot</name>
-    		<url>http://repo.spring.io/snapshot/</url>
-    	</repository>
-    	<repository>
-    		<id>cloudhopper</id>
-    		<name>Repository for Cloudhopper</name>
-    		<url>http://maven.cloudhopper.com/repos/third-party/</url>
-    	</repository>
-    	<repository>
-    		<id>jboss-repo-release</id>
-    		<name>Jboss Repository</name>
-    		<url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
-    	</repository>
-    	<repository>
-    		<id>central</id>
-    		<name>Maven Repository Switchboard</name>
-    		<layout>default</layout>
-    		<url>http://repo.maven.apache.org/maven2/</url>
-    	</repository>
-    	<repository>
-    		<id>maven-repo1</id>
-    		<name>maven-repo1</name>
-    		<layout>default</layout>
-    		<url>http://repo1.maven.org/maven2/</url>
-    	</repository>
-    	<repository>
-    		<id>sourceforge-releases</id>
-    		<name>Sourceforge Releases</name>
-    		<url>https://oss.sonatype.org/content/repositories/sourceforge-releases/</url>
-    	</repository>
-    </repositories>
-    
-    <pluginRepositories>
-    	<!-- 
-    	<pluginRepository>
-    		<id>oschina releases</id>
-    		<name>oschina Releases</name>
-    		<url>http://maven.oschina.net/content/groups/public/</url>
-    	</pluginRepository>
-    	 -->
-    	<pluginRepository>
-    		<id>maven2-repo</id>
-    		<name>Maven2 Repository</name>
-    		<url>http://repo1.maven.org/maven2/</url>
-    	</pluginRepository>
-    	<pluginRepository>
-    		<id>Codehaus repository</id>
-    		<url>http://repository.codehaus.org/</url>
-    	</pluginRepository>
-    	<!-- 
-    	<pluginRepository>
-    		<id>maven-db-plugin-repo</id>
-    		<name>maven db plugin repository</name>
-    		<url>http://maven-db-plugin.googlecode.com/svn/maven/repo/</url>
-    		<layout>default</layout>
-    	</pluginRepository>
-    	 -->
-    </pluginRepositories>
-    
-    <!-- 开发人员信息 -->
-    <developers>
-    	<developer>
-    		<name>wu_zhijun</name>
-    		<email>wu_zhijun@msn.com</email>
-    		<url>https://github.com/ewcmsfree</url>
-    		<roles>
-    			<role>software engineer</role>
-    		</roles>
-    		<timezone>8</timezone>
-    	</developer>
-    	<developer>
-    		<name>zhou_dongchu</name>
-    		<email>zhoudcrobin@qq.com</email>
-    		<url>https://github.com/ewcmsfree</url>
-    		<roles>
-    			<role>software engineer</role>
-    		</roles>
-    		<timezone>8</timezone>
-    	</developer>
-    </developers>
-    
-    <!-- 许可证 -->
-    <licenses>
-    	<license>
-    		<name>Apache License, Version 2.0</name>
-    		<url>http://www.apache.org/license/LICENSE-2.0</url>
-    	</license>
-    </licenses>
-    
-    <!-- 持续集成信息 -->
-    <ciManagement>
-    	<system>continuum</system>
-    	<url>https://travis-ci.org/ewcmsfree/rmyy</url>
-    	<notifiers>
-    		<notifier>
-    			<type>mail</type>
-    			<sendOnError>true</sendOnError>
-    			<sendOnFailure>true</sendOnFailure>
-    			<sendOnSuccess>true</sendOnSuccess>
-    			<sendOnWarning>false</sendOnWarning>
-    			<configuration>
-    				<address>wu_zhijun@msn.com</address>
-    			</configuration>
-    		</notifier>
-    	</notifiers>
-    </ciManagement>
-    
-    <!-- 问题反馈信息 -->
-    <issueManagement>
-    	<system>Github</system>
-    	<url>https://github.com/ewcmsfree/rmyy/issues</url>
-    </issueManagement>
-    
-    <!-- 分发管理 -->
-    <distributionManagement>
-    	<!-- mvn site:deploy 部署位置 -->
-    	<site>
-    		<id>local</id>
-    		<name>filesystem</name>
-    		<!-- 修改到磁盘的相应位置 -->
-    		<url>file:E:\target\site</url>
-    	</site>
-    </distributionManagement>
-    
-    <!-- 版本控制信息 -->
-    <scm>
-    	<url>https://github.com/ewcmsfree/rmyy/</url>
-    	<connection>scm:git:git://github.com/ewcmsfree/rmyy.git</connection>
-    	<developerConnection>scm:git:ssh://git@github.com:ewcmsfree/rmyy.git</developerConnection>
-    </scm>
-    
+	<modules>
+		<module>parent</module>
+	</modules>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.5</version>
+				<configuration>
+					<locales>zh_CN</locales>
+					<outputEncoding>UTF-8</outputEncoding>
+					<inputEncoding>UTF-8</inputEncoding>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<repositories>
+		<!-- <repository> <id>oschina release</id> <name>oschina release</name> 
+			<url>http://maven.oschina.net/content/groups/public/</url> </repository> -->
+		<repository>
+			<id>apache-repo</id>
+			<name>Apache Repository</name>
+			<url>https://repository.apache.org/content/groups/public/</url>
+		</repository>
+		<repository>
+			<id>java-repo</id>
+			<name>Java Repository</name>
+			<url>http://download.java.net/maven/2/</url>
+		</repository>
+		<repository>
+			<id>springsource-repo</id>
+			<name>SpringSource Repository</name>
+			<url>http://repo.spring.io/release/</url>
+		</repository>
+		<repository>
+			<id>springsource-repo-snapshot</id>
+			<name>SpringSource Repository Snapshot</name>
+			<url>http://repo.spring.io/snapshot/</url>
+		</repository>
+		<repository>
+			<id>cloudhopper</id>
+			<name>Repository for Cloudhopper</name>
+			<url>http://maven.cloudhopper.com/repos/third-party/</url>
+		</repository>
+		<repository>
+			<id>jboss-repo-release</id>
+			<name>Jboss Repository</name>
+			<url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
+		</repository>
+		<repository>
+			<id>central</id>
+			<name>Maven Repository Switchboard</name>
+			<layout>default</layout>
+			<url>http://repo.maven.apache.org/maven2/</url>
+		</repository>
+		<repository>
+			<id>maven-repo1</id>
+			<name>maven-repo1</name>
+			<layout>default</layout>
+			<url>http://repo1.maven.org/maven2/</url>
+		</repository>
+		<repository>
+			<id>sourceforge-releases</id>
+			<name>Sourceforge Releases</name>
+			<url>https://oss.sonatype.org/content/repositories/sourceforge-releases/</url>
+		</repository>
+		<repository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>bintray-dnault-maven</id>
+			<name>bintray</name>
+			<url>http://dl.bintray.com/dnault/maven</url>
+		</repository>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
+
+	<pluginRepositories>
+		<!-- <pluginRepository> <id>oschina releases</id> <name>oschina Releases</name> 
+			<url>http://maven.oschina.net/content/groups/public/</url> </pluginRepository> -->
+		<pluginRepository>
+			<id>maven2-repo</id>
+			<name>Maven2 Repository</name>
+			<url>http://repo1.maven.org/maven2/</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>Codehaus repository</id>
+			<url>http://repository.codehaus.org/</url>
+		</pluginRepository>
+		<!-- <pluginRepository> <id>maven-db-plugin-repo</id> <name>maven db plugin 
+			repository</name> <url>http://maven-db-plugin.googlecode.com/svn/maven/repo/</url> 
+			<layout>default</layout> </pluginRepository> -->
+	</pluginRepositories>
+
+	<!-- 开发人员信息 -->
+	<developers>
+		<developer>
+			<name>wu_zhijun</name>
+			<email>wu_zhijun@msn.com</email>
+			<url>https://github.com/ewcmsfree</url>
+			<roles>
+				<role>software engineer</role>
+			</roles>
+			<timezone>8</timezone>
+		</developer>
+		<developer>
+			<name>zhou_dongchu</name>
+			<email>zhoudcrobin@qq.com</email>
+			<url>https://github.com/ewcmsfree</url>
+			<roles>
+				<role>software engineer</role>
+			</roles>
+			<timezone>8</timezone>
+		</developer>
+	</developers>
+
+	<!-- 许可证 -->
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/license/LICENSE-2.0</url>
+		</license>
+	</licenses>
+
+	<!-- 持续集成信息 -->
+	<ciManagement>
+		<system>continuum</system>
+		<url>https://travis-ci.org/ewcmsfree/rmyy</url>
+		<notifiers>
+			<notifier>
+				<type>mail</type>
+				<sendOnError>true</sendOnError>
+				<sendOnFailure>true</sendOnFailure>
+				<sendOnSuccess>true</sendOnSuccess>
+				<sendOnWarning>false</sendOnWarning>
+				<configuration>
+					<address>wu_zhijun@msn.com</address>
+				</configuration>
+			</notifier>
+		</notifiers>
+	</ciManagement>
+
+	<!-- 问题反馈信息 -->
+	<issueManagement>
+		<system>Github</system>
+		<url>https://github.com/ewcmsfree/rmyy/issues</url>
+	</issueManagement>
+
+	<!-- 分发管理 -->
+	<distributionManagement>
+		<!-- mvn site:deploy 部署位置 -->
+		<site>
+			<id>local</id>
+			<name>filesystem</name>
+			<!-- 修改到磁盘的相应位置 -->
+			<url>file:E:\target\site</url>
+		</site>
+	</distributionManagement>
+
+	<!-- 版本控制信息 -->
+	<scm>
+		<url>https://github.com/ewcmsfree/rmyy/</url>
+		<connection>scm:git:git://github.com/ewcmsfree/rmyy.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:ewcmsfree/rmyy.git</developerConnection>
+	</scm>
+
 </project>
