--- a/empi-web/src/main/resources/resources.properties
+++ b/empi-web/src/main/resources/resources.properties
@@ -1,11 +1,11 @@
 #SQL Server embedded database settings
 connction.driverClassName = com.microsoft.sqlserver.jdbc.SQLServerDriver
-connection.url = jdbc:sqlserver://127.0.0.1:1433;databaseName=empi
+connection.url = jdbc:sqlserver://127.0.0.1:1433;databaseName=empi;SelectMethod=cursor;
 connection.username  =  sa
 connection.password = 123456
 
 #jpa configure
-jpa.persistenceUnitName = jpa.ewcms.empi.manage
+jpa.persistenceUnitName = jpa.empi.web.manage
 jpa.generateDdl = true
 jpa.database = SQL_SERVER
 jpa.databasePlatform = org.hibernate.dialect.SQLServer2008Dialect
@@ -35,7 +35,7 @@ druid.validationQuery = SELECT 'x'
 druid.testWhileIdle = true
 druid.testOnBorrow = false
 druid.testOnReturn = false
-druid.poolPreparedStatements = true
+druid.poolPreparedStatements = false
 druid.maxPoolPreparedStatementPerConnectionSize = 20
 #druid.filters = wall,stat
 druid.filters = stat,slf4j
