--- a/empi-ws/src/main/resources/resources.properties
+++ b/empi-ws/src/main/resources/resources.properties
@@ -1,6 +1,6 @@
 #SQL Server embedded database settings
 connction.driverClassName = com.microsoft.sqlserver.jdbc.SQLServerDriver
-connection.url = jdbc:sqlserver://127.0.0.1:1433;databaseName=empi
+connection.url = jdbc:sqlserver://127.0.0.1:1433;databaseName=empi;SelectMethod=cursor
 connection.username  =  sa
 connection.password = 123456
 
