--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -16,6 +16,7 @@
 		<module>../base-entity</module>
 		<module>../base-externalds</module>
 		<module>../base-report</module>
+		<module>../base-scheduling</module>
 		<module>../base-shiro</module>
 		<module>../empi-entity</module>
 		<module>../empi-web</module>
@@ -294,7 +295,8 @@
 
 		<shiro.version>1.3.2</shiro.version>
 
-		<ehcache.core.version>2.6.6</ehcache.core.version>
+		<ehcache.core.version>2.6.9</ehcache.core.version>
+		<!-- <ehcache.core.version>2.4.8</ehcache.core.version> -->
 
 		<slf4j.version>1.7.7</slf4j.version>
 		<logback.version>1.1.2</logback.version>
