--- a/empi-hl7/pom.xml
+++ b/empi-hl7/pom.xml
@@ -8,11 +8,11 @@
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 
-	<artifactId>empi-hl7v2</artifactId>
+	<artifactId>empi-hl7</artifactId>
 	<packaging>jar</packaging>
-	<name>empi-hl7v2</name>
+	<name>empi-hl7</name>
 	<description>sms</description>
-	<url>https://github.com/ewcmsfree/rmyy/empi-hl7v2</url>
+	<url>https://github.com/ewcmsfree/rmyy/empi-hl7</url>
 
 	<properties>
 		<support.basedir>${project.parent.parent.basedir}/src/support</support.basedir>
@@ -22,6 +22,12 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.ewcms</groupId>
+			<artifactId>empi-entity</artifactId>
+			<version>${empi.version}</version>
+		</dependency>
+
 		<!-- HL7 V2 -->
 		<dependency>
 			<groupId>ca.uhn.hapi</groupId>
@@ -33,6 +39,7 @@
 			<artifactId>hapi-hl7overhttp</artifactId>
 			<version>2.2</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>ca.uhn.hapi</groupId>
 			<artifactId>hapi-structures-v21</artifactId>
@@ -72,12 +79,6 @@
 			<groupId>ca.uhn.hapi</groupId>
 			<artifactId>hapi-structures-v26</artifactId>
 			<version>2.2</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.ewcms</groupId>
-			<artifactId>empi-entity</artifactId>
-			<version>${empi.version}</version>
 		</dependency>
 	</dependencies>
 </project>
