--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -20,7 +20,7 @@
 		<module>../base-shiro</module>
 		<module>../empi-entity</module>
 		<module>../empi-web</module>
-		<module>../empi-hl7v2</module>
+		<module>../empi-hl7</module>
 		<module>../empi-ws</module>
 		<!-- <module>../empi-sms</module> -->
 	</modules>
