--- a/empi-web/pom.xml
+++ b/empi-web/pom.xml
@@ -236,6 +236,11 @@
 			<artifactId>empi-entity</artifactId>
 			<version>${empi.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.ewcms</groupId>
+			<artifactId>empi-common</artifactId>
+			<version>${empi.version}</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
