--- a/empi-ws/src/main/resources/resources.properties
+++ b/empi-ws/src/main/resources/resources.properties
@@ -9,7 +9,7 @@ jpa.persistenceUnitName = jpa.ewcms.empi.manage
 jpa.generateDdl = true
 jpa.database = SQL_SERVER
 jpa.databasePlatform = org.hibernate.dialect.SQLServer2008Dialect
-jpa.showSql = true
+jpa.showSql = false
 
 #hibernate configure
 hibernate.query.substitutions = true 1, false 0
