--- a/empi-common/pom.xml
+++ b/empi-common/pom.xml
@@ -80,5 +80,11 @@
 			<artifactId>hapi-structures-v26</artifactId>
 			<version>2.2</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 	</dependencies>
 </project>
