--- a/empi-web/src/main/resources/resources.properties
+++ b/empi-web/src/main/resources/resources.properties
@@ -2,7 +2,8 @@
 #connction.driverClassName = com.microsoft.sqlserver.jdbc.SQLServerDriver
 #connection.url = jdbc:sqlserver://127.0.0.1:1433;databaseName=empi;SelectMethod=cursor
 connction.driverClassName = net.sf.log4jdbc.DriverSpy
-connection.url = jdbc:log4jdbc:sqlserver://127.0.0.1:1433;databaseName=empi;SelectMethod=cursorconnection.username  =  sa
+connection.url = jdbc:log4jdbc:sqlserver://127.0.0.1:1433;databaseName=empi;SelectMethod=cursor
+connection.username  =  sa
 connection.password = 123456
 
 #jpa configure
