--- a/empi-ws/src/main/resources/resources.properties
+++ b/empi-ws/src/main/resources/resources.properties
@@ -18,11 +18,11 @@ hibernate.query.substitutions = true 1, false 0
 hibernate.default_batch_fetch_size = 20
 hibernate.max_fetch_depth = 2
 hibernate.bytecode.use_reflection_optimizer = true
-#hibernate.cache.use_second_level_cache = true
-#hibernate.cache.use_query_cache = true
-#hibernate.cache.region.factory_class = org.hibernate.cache.ehcache.EhCacheRegionFactory
-#net.sf.ehcache.configurationResourceName = ehcache/ehcache-hibernate.xml
-#hibernate.cache.use_structured_entries = true
+hibernate.cache.use_second_level_cache = true
+hibernate.cache.use_query_cache = true
+hibernate.cache.region.factory_class = org.hibernate.cache.ehcache.EhCacheRegionFactory
+net.sf.ehcache.configurationResourceName = ehcache/ehcache-hibernate.xml
+hibernate.cache.use_structured_entries = true
 hibernate.generate_statistics = true
 hibernate.hbm2ddl.auto = update
 
