--- a/yjk-web/src/main/resources/resources.properties
+++ b/yjk-web/src/main/resources/resources.properties
@@ -2,15 +2,15 @@
 #connction.driverClassName = com.microsoft.sqlserver.jdbc.SQLServerDriver
 #connection.url = jdbc:sqlserver://127.0.0.1:1433;databaseName=empi;SelectMethod=cursor
 connection.driverClassName = net.sf.log4jdbc.DriverSpy
-connection.url = jdbc:log4jdbc:sqlserver://127.0.0.1:1433;databaseName=yjk;SelectMethod=cursor
-connection.username  =  journal
+connection.url = jdbc:log4jdbc:postgresql://127.0.0.1:5432/yjk
+connection.username  =  postgres
 connection.password = 123456
 
 #jpa configure
 jpa.persistenceUnitName = jpa.yjk.web.manage
 jpa.generateDdl = true
-jpa.database = SQL_SERVER
-jpa.databasePlatform = org.hibernate.dialect.SQLServer2008Dialect
+jpa.database = POSTGRESQL
+jpa.databasePlatform = org.hibernate.dialect.PostgreSQL9Dialect
 jpa.showSql = true
 
 #hibernate configure
