--- a/base-scheduling/pom.xml
+++ b/base-scheduling/pom.xml
@@ -24,7 +24,7 @@
     <dependencies>
 		<dependency>
 			<groupId>com.ewcms</groupId>
-			<artifactId>base-entity</artifactId>
+			<artifactId>base-post-entity</artifactId>
 			<version>${entity.version}</version>
 		</dependency>
 		
