--- a/base-shiro/pom.xml
+++ b/base-shiro/pom.xml
@@ -22,7 +22,7 @@
     <dependencies>
 		<dependency>
 			<groupId>com.ewcms</groupId>
-			<artifactId>base-entity</artifactId>
+			<artifactId>base-post-entity</artifactId>
 			<version>${entity.version}</version>
 		</dependency>
 	</dependencies>
