--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -13,21 +13,22 @@
 	
 	<modules>
 		<module>../base-common</module>
-		<module>../base-entity</module>
+		<!-- <module>../base-entity</module>  -->
 		<module>../base-post-entity</module>
 		<module>../base-externalds</module>
 		<module>../base-report</module>
 		<module>../base-scheduling</module>
 		<module>../base-shiro</module>
-		<module>../empi-entity</module>
-		<module>../empi-web</module>
-		<module>../empi-common</module>
-		<module>../empi-ws</module>
+		<!-- <module>../empi-entity</module> -->
+		<!-- <module>../empi-web</module> -->
+		<!-- <module>../empi-common</module> -->
+		<!-- <module>../empi-ws</module> -->
 		<!-- 短信平台 -->
 		<!-- <module>../empi-sms</module> -->
 		<!-- 追溯查询 -->
 		<!-- <module>../trace-web</module> -->
-		<module>../weixin-web</module>
+		<!-- <module>../weixin-web</module> -->
+		<module>../yjk-web</module>
 	</modules>
 
 	<repositories>
@@ -281,7 +282,7 @@
 		<common.fileupload.version>1.3</common.fileupload.version>
 		<ant.version>1.9.2</ant.version>
 
-		<druid.version>1.0.29</druid.version>
+		<druid.version>1.1.11</druid.version>
 
 		<servlet.version>3.0.1</servlet.version>
 		<jsp.version>2.2</jsp.version>
