--- a/yjk-web/pom.xml
+++ b/yjk-web/pom.xml
@@ -18,7 +18,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<empi.version>1.0.0</empi.version>
 		<yuicompressor.version>2.4.2</yuicompressor.version>
-		<postgresql.version>42.2.5</postgresql.version>
+		<postgresql.version>9.4-1206-jdbc41</postgresql.version>
 	</properties>
 	<dependencies>
 		<dependency>
