--- a/yjk-web/src/main/resources/resources.properties
+++ b/yjk-web/src/main/resources/resources.properties
@@ -2,7 +2,7 @@
 #connction.driverClassName = com.microsoft.sqlserver.jdbc.SQLServerDriver
 #connection.url = jdbc:sqlserver://127.0.0.1:1433;databaseName=empi;SelectMethod=cursor
 connection.driverClassName = net.sf.log4jdbc.DriverSpy
-connection.url = jdbc:log4jdbc:postgresql://localhost:5432/yjk
+connection.url = jdbc:log4jdbc:postgresql://172.16.0.160:5432/yjk
 connection.username = postgres
 connection.password = 123456
 
