--- a/yjk-web/src/main/resources/resources.properties
+++ b/yjk-web/src/main/resources/resources.properties
@@ -7,7 +7,7 @@ connection.username = postgres
 connection.password = 123456
 
 #jpa configure
-jpa.persistenceUnitName = jpa.yjk.web.manage
+jpa.persistenceUnitName = jpa.rmyy.web.manage
 jpa.generateDdl = true
 jpa.database = POSTGRESQL
 jpa.databasePlatform = org.hibernate.dialect.PostgreSQL9Dialect
