--- a/base-scheduling/src/main/resources/ewcms.quartz.base.properties
+++ b/base-scheduling/src/main/resources/ewcms.quartz.base.properties
@@ -12,5 +12,5 @@ org.quartz.threadPool.threadPriority = 3
 org.quartz.jobStore.misfireThreshold = 180000
 
 org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreTX
-org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.MSSQLDelegate
+org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
 org.quartz.jobStore.tablePrefix = QRTZ_
