--- a/hzda-web/src/main/resources/resources.properties
+++ b/hzda-web/src/main/resources/resources.properties
@@ -1,8 +1,8 @@
 #SQL Server embedded database settings
 #connction.driverClassName = com.microsoft.sqlserver.jdbc.SQLServerDriver
 #connection.url = jdbc:sqlserver://127.0.0.1:1433;databaseName=empi;SelectMethod=cursor
-connection.driverClassName = net.sf.log4jdbc.DriverSpy
-connection.url = jdbc:log4jdbc:postgresql://127.0.0.1:5432/hzda
+connection.driverClassName = org.postgresql.Driver
+connection.url = jdbc:postgresql://localhost:5432/hzda
 connection.username = postgres
 connection.password = 123456
 
@@ -11,7 +11,7 @@ jpa.persistenceUnitName = jpa.rmyy.web.manage
 jpa.generateDdl = true
 jpa.database = POSTGRESQL
 jpa.databasePlatform = org.hibernate.dialect.PostgreSQL9Dialect
-jpa.showSql = true
+jpa.showSql = false
 
 #hibernate configure
 hibernate.query.substitutions = true 1, false 0
@@ -27,20 +27,20 @@ hibernate.generate_statistics = true
 hibernate.hbm2ddl.auto = update
 
 #druid database properties set
-druid.initialSize = 10
-druid.minIdle = 10
-druid.maxActive = 50
+druid.initialSize = 100
+druid.minIdle = 100
+druid.maxActive = 300
 druid.maxWait = 60000
 druid.timeBetweenEvictionRunsMillis = 60000
 druid.minEvictableIdleTimeMillis = 300000
 druid.validationQuery = SELECT 'x'
 druid.testWhileIdle = true
-druid.testOnBorrow = false
+druid.testOnBorrow = true
 druid.testOnReturn = false
-druid.poolPreparedStatements = false
+druid.poolPreparedStatements = true
 druid.maxPoolPreparedStatementPerConnectionSize = 20
-#druid.filters = wall,stat
-druid.filters = stat,slf4j
+druid.filters = wall,stat
+#druid.filters = stat,slf4j
 
 #系统管理员密码重试次数
 user.password.maxRetryCount = 10
