字典功能完善

--- a/yjk-web/src/main/resources/resources.properties
+++ b/yjk-web/src/main/resources/resources.properties
@@ -24,7 +24,7 @@ hibernate.cache.region.factory_class = org.hibernate.cache.ehcache.EhCacheRegion
 net.sf.ehcache.configurationResourceName = ehcache/ehcache-hibernate.xml
 hibernate.cache.use_structured_entries = true
 hibernate.generate_statistics = true
-hibernate.hbm2ddl.auto = none
+hibernate.hbm2ddl.auto = update
 
 #druid database properties set
 druid.initialSize = 10
