add review function

--- a/yjk-web/src/main/resources/resources.properties
+++ b/yjk-web/src/main/resources/resources.properties
@@ -82,7 +82,7 @@ shiro.unauthorizedUrl = /unauthorized
 #默认的登录成功页
 shiro.default.success.url = /home
 #验证码是否开启
-shiro.jcaptcha.enable = true
+shiro.jcaptcha.enable = false
 #验证码错误时重定向的地址
 shiro.jcaptcha.error.url = /login?jcaptchaError=1
 
