--- a/yjk-web/src/main/resources/resources.properties
+++ b/yjk-web/src/main/resources/resources.properties
@@ -3,6 +3,8 @@
 #connection.url = jdbc:sqlserver://127.0.0.1:1433;databaseName=empi;SelectMethod=cursor
 connection.driverClassName = net.sf.log4jdbc.DriverSpy
 connection.url = jdbc:log4jdbc:postgresql://localhost:5432/yjk
+#connection.driverClassName = org.postgresql.Driver
+#connection.url = jdbc:postgresql://172.16.0.160:5432/yjk
 connection.username = postgres
 connection.password = 123456
 
@@ -11,7 +13,7 @@ jpa.persistenceUnitName = jpa.rmyy.web.manage
 jpa.generateDdl = true
 jpa.database = POSTGRESQL
 jpa.databasePlatform = org.hibernate.dialect.PostgreSQL9Dialect
-jpa.showSql = true
+jpa.showSql = false
 
 #hibernate configure
 hibernate.query.substitutions = true 1, false 0
