--- a/hzda-web/src/main/resources/resources.properties
+++ b/hzda-web/src/main/resources/resources.properties
@@ -1,13 +1,13 @@
 #SQL Server embedded database settings
-#connction.driverClassName = com.microsoft.sqlserver.jdbc.SQLServerDriver
-#connection.url = jdbc:sqlserver://127.0.0.1:1433;databaseName=empi;SelectMethod=cursor
-connection.driverClassName = org.postgresql.Driver
-connection.url = jdbc:postgresql://localhost:5432/hzda
+#connection.driverClassName = org.postgresql.Driver
+#connection.url = jdbc:postgresql://localhost:5432/hzda
+connection.driverClassName = net.sf.log4jdbc.DriverSpy
+connection.url = jdbc:log4jdbc:postgresql://localhost:5432/hzda
 connection.username = postgres
 connection.password = 123456
 
 #jpa configure
-jpa.persistenceUnitName = jpa.rmyy.web.manage
+jpa.persistenceUnitName = jpa.rmyy.hzda.web.manage
 jpa.generateDdl = true
 jpa.database = POSTGRESQL
 jpa.databasePlatform = org.hibernate.dialect.PostgreSQL9Dialect
@@ -33,14 +33,14 @@ druid.maxActive = 300
 druid.maxWait = 60000
 druid.timeBetweenEvictionRunsMillis = 60000
 druid.minEvictableIdleTimeMillis = 300000
-druid.validationQuery = SELECT 'x'
+druid.validationQuery = select version()
 druid.testWhileIdle = true
 druid.testOnBorrow = true
 druid.testOnReturn = false
 druid.poolPreparedStatements = true
 druid.maxPoolPreparedStatementPerConnectionSize = 20
-druid.filters = wall,stat
-#druid.filters = stat,slf4j
+#druid.filters = wall,stat
+druid.filters = stat,slf4j
 
 #系统管理员密码重试次数
 user.password.maxRetryCount = 10
@@ -50,8 +50,8 @@ shiro.session.globalSessionTimeout = 1800000
 #session验证时间间隔(即验证会话是否还有效) 1000*60*60milliseconds  =  1小时（3600000）
 shiro.session.validation.interval = 3600000
 #session 缓存的名字
-shiro.active.session.cacheName = shiro-activeSessionCache
-shiro.uid.cookie.name = uid
+shiro.active.session.cacheName = hzda-shiro-activeSessionCache
+shiro.uid.cookie.name = hzda-uid
 #在maven profile中根据环境配置
 #如果是ip/localhost 此处domain为空（chrome不能设置）
 shiro.uid.cookie.domain = 
