--- a/yjk-web/src/main/webapp/WEB-INF/web.xml
+++ b/yjk-web/src/main/webapp/WEB-INF/web.xml
@@ -121,7 +121,7 @@
 	</servlet-mapping>
 
 	<servlet>
-		<servlet-name>spring</servlet-name>
+		<servlet-name>yjk_spring</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
@@ -131,7 +131,7 @@
 		<async-supported>true</async-supported>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>spring</servlet-name>
+		<servlet-name>yjk_spring</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
