--- a/yjk-web/src/main/resources/resources.properties
+++ b/yjk-web/src/main/resources/resources.properties
@@ -1,6 +1,4 @@
 #SQL Server embedded database settings
-#connction.driverClassName = com.microsoft.sqlserver.jdbc.SQLServerDriver
-#connection.url = jdbc:sqlserver://127.0.0.1:1433;databaseName=empi;SelectMethod=cursor
 connection.driverClassName = net.sf.log4jdbc.DriverSpy
 connection.url = jdbc:log4jdbc:postgresql://localhost:5432/yjk
 #connection.driverClassName = org.postgresql.Driver
@@ -9,7 +7,7 @@ connection.username = postgres
 connection.password = 123456
 
 #jpa configure
-jpa.persistenceUnitName = jpa.rmyy.web.manage
+jpa.persistenceUnitName = jpa.rmyy.yjk.web.manage
 jpa.generateDdl = true
 jpa.database = POSTGRESQL
 jpa.databasePlatform = org.hibernate.dialect.PostgreSQL9Dialect
@@ -35,12 +33,12 @@ druid.maxActive = 50
 druid.maxWait = 60000
 druid.timeBetweenEvictionRunsMillis = 60000
 druid.minEvictableIdleTimeMillis = 300000
-druid.validationQuery = SELECT 'x'
+druid.validationQuery = select version()
 druid.testWhileIdle = true
 druid.testOnBorrow = false
 druid.testOnReturn = false
-druid.poolPreparedStatements = false
-druid.maxPoolPreparedStatementPerConnectionSize = 20
+druid.poolPreparedStatements = true
+druid.maxPoolPreparedStatementPerConnectionSize = 100
 #druid.filters = wall,stat
 druid.filters = stat,slf4j
 
@@ -52,8 +50,8 @@ shiro.session.globalSessionTimeout = 1800000
 #session验证时间间隔(即验证会话是否还有效) 1000*60*60milliseconds  =  1小时（3600000）
 shiro.session.validation.interval = 3600000
 #session 缓存的名字
-shiro.active.session.cacheName = shiro-activeSessionCache
-shiro.uid.cookie.name = uid
+shiro.active.session.cacheName = yjk-shiro-activeSessionCache
+shiro.uid.cookie.name = yjk-uid
 #在maven profile中根据环境配置
 #如果是ip/localhost 此处domain为空（chrome不能设置）
 shiro.uid.cookie.domain = 
