--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -274,17 +274,21 @@
 		<support.basedir>${project.parent.basedir}/src/support</support.basedir>
 		<site.basedir>${project.parent.basedir}</site.basedir>
 
-		<cglib.version>3.1</cglib.version>
-		<asm.version>4.2</asm.version>
+		<cglib.version>3.2.12</cglib.version>
+		<asm.version>7.1</asm.version>
 
-		<commons-lang3.version>3.1</commons-lang3.version>
-		<commons-io.version>2.4</commons-io.version>
-		<commons-collections4.version>4.0</commons-collections4.version>
-		<common.compress.version>1.6</common.compress.version>
-
+		<commons-lang3.version>3.9</commons-lang3.version>
+		<commons-collections4.version>4.4</commons-collections4.version>
+		<common-compress.version>1.18</common-compress.version>
+		<commons-vfs2.version>2.3</commons-vfs2.version>
+		<commons-text.version>1.7</commons-text.version>
+		
+		<common-fileupload.version>1.4</common-fileupload.version>
+		<commons-io.version>2.6</commons-io.version>
+		<commons-codec.version>1.12</commons-codec.version>
+		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 		<guava.version>15.0</guava.version>
-		<common.fileupload.version>1.3</common.fileupload.version>
-		<ant.version>1.9.2</ant.version>
+		<ant.version>1.9.3</ant.version>
 
 		<druid.version>1.1.18</druid.version>
 
@@ -296,30 +300,30 @@
 		<spring.version>4.0.4.RELEASE</spring.version>
 		<spring-data-jpa.version>1.7.1.RELEASE</spring-data-jpa.version>
 
-		<hibernate.core.version>4.3.5.Final</hibernate.core.version>
-		<hibernate.ehcache.version>4.3.5.Final</hibernate.ehcache.version>
-		<hibernate.commons.annotaions.version>4.0.4.Final</hibernate.commons.annotaions.version>
-		<hibernate.validator.version>5.0.2.Final</hibernate.validator.version>
+		<hibernate-core.version>4.3.5.Final</hibernate-core.version>
+		<hibernate-ehcache.version>4.3.5.Final</hibernate-ehcache.version>
+		<hibernate-commons-annotaions.version>4.0.4.Final</hibernate-commons-annotaions.version>
+		<hibernate-validator.version>5.0.2.Final</hibernate-validator.version>
 
-		<javassist.version>3.18.0-GA</javassist.version>
+		<javassist.version>3.25.0-GA</javassist.version>
 
 		<shiro.version>1.4.1</shiro.version>
-
-		<ehcache.core.version>2.6.9</ehcache.core.version>
-		<!-- <ehcache.core.version>2.4.8</ehcache.core.version> -->
 
 		<slf4j.version>1.7.7</slf4j.version>
 		<logback.version>1.1.2</logback.version>
 
 		<fastjson.version>1.2.58</fastjson.version>
 
-		<joda-time.version>2.3</joda-time.version>
-		<prettytime.version>3.2.3.Final</prettytime.version>
+		<joda-time.version>2.10.3</joda-time.version>
+		<prettytime.version>4.0.2.Final</prettytime.version>
+
 		<jcaptcha.version>2.0-alpha-1</jcaptcha.version>
 
-		<jsoup.version>1.7.3</jsoup.version>
+		<jsoup.version>1.12.1</jsoup.version>
+		
+		<freemarker.version>2.3.28</freemarker.version>
 
-		<pinyin4j.version>2.5.0</pinyin4j.version>
+		<pinyin4j.version>2.5.1</pinyin4j.version>
 	</properties>
 
 	<dependencies>
@@ -346,11 +350,41 @@
 			<artifactId>commons-collections4</artifactId>
 			<version>${commons-collections4.version}</version>
 		</dependency>
-
 		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>${guava.version}</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>${common-compress.version}</version>
+        </dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-vfs2</artifactId>
+			<version>${commons-vfs2.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>maven-scm-api</artifactId>
+					<groupId>org.apache.maven.scm</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>
+						maven-scm-provider-svn-commons
+					</artifactId>
+					<groupId>org.apache.maven.scm</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>maven-scm-provider-svnexe</artifactId>
+					<groupId>org.apache.maven.scm</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-text</artifactId>
+		    <version>${commons-text.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>${common-fileupload.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -360,12 +394,12 @@
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>1.9</version>
+			<version>${commons-codec.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
-			<version>1.8.3</version>
+			<version>${commons-beanutils.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-logging</groupId>
@@ -374,15 +408,10 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>commons-fileupload</groupId>
-			<artifactId>commons-fileupload</artifactId>
-			<version>${common.fileupload.version}</version>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
 		</dependency>
-		<dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-compress</artifactId>
-            <version>${common.compress.version}</version>
-        </dependency>
 		<dependency>
 			<groupId>org.apache.ant</groupId>
 			<artifactId>ant</artifactId>
@@ -394,7 +423,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
+		
 		<!-- db connection jar -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
@@ -493,7 +522,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>${hibernate.core.version}</version>
+			<version>${hibernate-core.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-logging</groupId>
@@ -508,7 +537,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>${hibernate.core.version}</version>
+			<version>${hibernate-core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.javassist</groupId>
@@ -524,7 +553,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-ehcache</artifactId>
-			<version>${hibernate.ehcache.version}</version>
+			<version>${hibernate-ehcache.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-logging</groupId>
@@ -539,7 +568,7 @@
 		<dependency>
 			<groupId>org.hibernate.common</groupId>
 			<artifactId>hibernate-commons-annotations</artifactId>
-			<version>${hibernate.commons.annotaions.version}</version>
+			<version>${hibernate-commons-annotaions.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-logging</groupId>
@@ -560,7 +589,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>${hibernate.validator.version}</version>
+			<version>${hibernate-validator.version}</version>
 		</dependency>
 
 		<!-- shiro jar -->
@@ -656,13 +685,14 @@
 			<artifactId>prettytime</artifactId>
 			<version>${prettytime.version}</version>
 		</dependency>
+		
 		<!-- joda time 相关jar -->
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>${joda-time.version}</version>
 		</dependency>
-
+		
 		<!-- html处理jar -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
@@ -673,31 +703,9 @@
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
-			<version>2.3.19</version>
+			<version>${freemarker.version}</version>
 		</dependency>
-
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-vfs2</artifactId>
-			<version>2.0</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>maven-scm-api</artifactId>
-					<groupId>org.apache.maven.scm</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>
-						maven-scm-provider-svn-commons
-					</artifactId>
-					<groupId>org.apache.maven.scm</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>maven-scm-provider-svnexe</artifactId>
-					<groupId>org.apache.maven.scm</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
+		
 		<!-- TEST begin -->
 		<!-- junit -->
 		<dependency>
