--- a/yjk-web/src/main/resources/resources.properties
+++ b/yjk-web/src/main/resources/resources.properties
@@ -25,8 +25,12 @@ net.sf.ehcache.configurationResourceName = ehcache/ehcache-hibernate.xml
 hibernate.cache.use_structured_entries = true
 hibernate.generate_statistics = true
 hibernate.hbm2ddl.auto = update
+#使"java.sql.SQLFeatureNotSupportedException: 这个 org.postgresql.jdbc4.Jdbc4Connection.createClob() 方法尚未被实作。"这个不出现
+#hibernate.temp.use_jdbc_metadata_defaults = false
+hibernate.jdbc.lob.non_contextual_creation = true
 
 #druid database properties set
+druid.name = yjk-datasource
 druid.initialSize = 10
 druid.minIdle = 10
 druid.maxActive = 50
