在修改页面增加不能空的提示

--- a/hzda-web/src/main/resources/resources.properties
+++ b/hzda-web/src/main/resources/resources.properties
@@ -14,6 +14,7 @@ jpa.databasePlatform = org.hibernate.dialect.PostgreSQL9Dialect
 jpa.showSql = false
 
 #hibernate configure
+druid.name = hzda-datasource
 hibernate.query.substitutions = true 1, false 0
 hibernate.default_batch_fetch_size = 20
 hibernate.max_fetch_depth = 2
@@ -25,6 +26,9 @@ net.sf.ehcache.configurationResourceName = ehcache/ehcache-hibernate.xml
 hibernate.cache.use_structured_entries = true
 hibernate.generate_statistics = true
 hibernate.hbm2ddl.auto = update
+#使"java.sql.SQLFeatureNotSupportedException: 这个 org.postgresql.jdbc4.Jdbc4Connection.createClob() 方法尚未被实作。"这个不出现
+#hibernate.temp.use_jdbc_metadata_defaults = false
+hibernate.jdbc.lob.non_contextual_creation = true
 
 #druid database properties set
 druid.initialSize = 100
