--- a/hzda-web/src/main/resources/resources.properties
+++ b/hzda-web/src/main/resources/resources.properties
@@ -31,18 +31,19 @@ hibernate.hbm2ddl.auto = update
 hibernate.jdbc.lob.non_contextual_creation = true
 
 #druid database properties set
-druid.initialSize = 100
-druid.minIdle = 100
-druid.maxActive = 300
+druid.name = hzda-datasource
+druid.initialSize = 10
+druid.minIdle = 10
+druid.maxActive = 50
 druid.maxWait = 60000
 druid.timeBetweenEvictionRunsMillis = 60000
 druid.minEvictableIdleTimeMillis = 300000
 druid.validationQuery = select version()
 druid.testWhileIdle = true
-druid.testOnBorrow = true
+druid.testOnBorrow = false
 druid.testOnReturn = false
 druid.poolPreparedStatements = true
-druid.maxPoolPreparedStatementPerConnectionSize = 20
+druid.maxPoolPreparedStatementPerConnectionSize = 100
 #druid.filters = wall,stat
 druid.filters = stat,slf4j
 
