--- a/hzda-web/pom.xml
+++ b/hzda-web/pom.xml
@@ -73,6 +73,11 @@
 			</exclusions>			
 		</dependency>
 		<dependency>
+			<groupId>com.ewcms</groupId>
+			<artifactId>base-sms</artifactId>
+			<version>${empi.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.yahoo.platform.yui</groupId>
 			<artifactId>yuicompressor</artifactId>
 			<version>${yuicompressor.version}</version>
