--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -23,7 +23,7 @@
 		<!-- <module>../empi-common</module> -->
 		<!-- <module>../empi-ws</module> -->
 		<!-- 短信平台 -->
-		<!-- <module>../empi-sms</module> -->
+		<module>../base-sms</module>
 		<!-- 追溯查询 -->
 		<!-- <module>../trace-web</module> -->
 		<!-- <module>../weixin-web</module> -->
@@ -312,7 +312,7 @@
 		<slf4j.version>1.7.7</slf4j.version>
 		<logback.version>1.1.2</logback.version>
 
-		<fastjson.version>1.2.58</fastjson.version>
+		<fastjson.version>1.2.60</fastjson.version>
 
 		<joda-time.version>2.10.3</joda-time.version>
 		<prettytime.version>4.0.2.Final</prettytime.version>
