完善短信发送功能

--- a/hzda-web/src/main/resources/resources.properties
+++ b/hzda-web/src/main/resources/resources.properties
@@ -103,6 +103,7 @@ domain = dysmsapi.aliyuncs.com
 RegionId = cn-hangzhou
 accessKeyId = LTAI4FuKFfqgqrQEwHRg9g7R
 accessKeySecret = 9ifJfdb6tgTXfXrhJE0qJ8syOTzQFa
-signName = GZSS
+#\u8d63\u51ef\u79d1\u6280(赣凯科技)
+signName = \u8d63\u51ef\u79d1\u6280
 templateCode = SMS_174275095
 templateCode1 = SMS_174020131
